# checkers

./: CMakeLists.txt  README.md
include/core/: Engine.hpp  Object.hpp  System.hpp  Timer.hpp
include/objects/: BluePiece.hpp  Piece.hpp  RedPiece.hpp  Selector.hpp
src/: main.cpp
src/core/: Engine.cpp  Object.cpp  System.cpp  Timer.cpp
src/objects/: BluePiece.cpp  Piece.cpp  RedPiece.cpp  Selector.cpp
